# SystemProgramming

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
0x02/1-Process/: CMakeLists.txt  Doxyfile  fork1.c  fork2.c  fork3.c  print-pid.c  sigchld.c  system.c  zombie.c
0x03/2-Threads/: CMakeLists.txt  Doxyfile  cleanup.c  critical-section.c  detached.c  primes.c  pthread-1.c  pthread-2.c  pthread-3.c  tsd.c
0x04/3-Synchro/: CMakeLists.txt  Doxyfile  condvar.c  job-queue1.c  job-queue2.c  job-queue3.c  spin-condvar.c
0x04/Lab_02/: CMakeLists.txt  Doxyfile  EatPhilosopherOptions.c  EatPhilosopherOptions.h  Fork.c  Fork.h  Input.c  Philosopher.c  Philosopher.h  RealTimeTableState.c  RealTimeTableState.h  Table.c  Table.h  Utils.c  Utils.h  main.c
0x04/Lab_02/Lab_02_Android/: local.properties
0x04/Lab_02/Lab_02_Android/app/: build.gradle
0x04/Lab_02/Lab_02_Android/app/jni/: CMakeLists.txt
0x04/Lab_02/Lab_02_Android/app/jni/src/: CMakeLists.txt  MainAndroid.c  YourSourceHere.c
0x04/Lab_02/Lab_02_Android/app/src/main/: AndroidManifest.xml
0x04/Lab_02/Lab_02_Android/app/src/main/java/nodomain/prekel/lab02android/: HIDDevice.java  (+8 more)
0x04/Lab_02/Lab_02_Android/app/src/main/res/values/: strings.xml
0x04/Lab_02/Lab_02_Android/gradle/wrapper/: gradle-wrapper.properties
0x04/Lab_02/Lab_02_Interactive/: CMakeLists.txt  MainInteractive.c  main.c
0x04/Lab_02/Lab_02_InteractiveLib/: CMakeLists.txt  MainCycleThread.c  MainCycleThread.h  MainWindow.c  MainWindow.h  ProgramQuitThread.c  ProgramQuitThread.h  RendererThread.c  RendererThread.h
0x04/Lab_02/Lab_02_Lib/: AutoEatThread.c  CMakeLists.txt  EatingInterrupter.h  Fork.c  Fork.h  Input.c  Input.h  Logger.c  Logger.h  Macro.h  Philosopher.c  Philosopher.h  PhilosopherEatingThread.c  PhilosopherEatingThread.h  PhilosophersSpawnerThread.c  PhilosophersSpawnerThread.h  PhilosophersWaiterThread.c  PhilosophersWaiterThread.h  RealTimeTableStateThread.c  Table.c  Table.h  Utils.c  Utils.h
0x04/Lab_02/Lab_02_Wasm/: CMakeLists.txt  MainWasm.c  main.c
0x04/Lab_02_Interactive/: CMakeLists.txt  MainWindow.c  MainWindow.h  ProgramQuitThread.c  ProgramQuitThread.h  RendererThread.c  RendererThread.h  main.c
0x04/Lab_02_Lib/: AutoEatThread.c  AutoEatThread.h  CMakeLists.txt  EatPhilosopherOptions.c  EatPhilosopherOptions.h  EatingInterrupter.c  EatingInterrupter.h  Fork.c  Fork.h  Log.c  Log.h  Macro.h  Philosopher.c  Philosopher.h  PhilosopherEatingThread.c  PhilosopherEatingThread.h  PhilosophersWaiterThread.c  PhilosophersWaiterThread.h  RealTimeTableState.c  RealTimeTableStateThread.c  RealTimeTableStateThread.h  Table.c  Table.h  Utils.c  Utils.h  main.c
0x06/Lab_03/Lab_03_Console/: Actions.c  Actions.h  CMakeLists.txt  Input.c  Input.h  MainConsole.c  compressor_interface.h  logging_compressor.h  main.c  point2d.c  point2d.h  point3d.c  point3d.h  points.c  points.h  qwer.c  qwer.h  rar.c  rar.h  zip.c  zip.h
0x06/Lab_03/Lab_03_Lib/: Archipelago.c  Archipelago.h  ArchipelagoCollection.c  ArchipelagoCollection.h  ArchipelagoCollectionQuery.c  ArchipelagoCollectionQuery.h  CMakeLists.txt  Data.c  Data.h  DataLinkedList.c  DataLinkedList.h  LinkedList.c  LinkedList.h  LinkedListDeclarations.h  LinkedListFunctions.h  LinkedListNode.c  LinkedListNode.h
0x06/Lab_03/Lab_03_LibTests/: ArchipelagoCollectionQueryTests.c  ArchipelagoCollectionQueryTests.h  ArchipelagoCollectionTests.c  ArchipelagoCollectionTests.h  CMakeLists.txt  LinkedListTests.c  LinkedListTests.h  MainLibTests.c  Suite.c  Suite.h  main.c
0x08/4-Files/: CMakeLists.txt  Doxyfile  check-access.c  create-file.c  hexdump.c  listdir.c  lock-file.c  lseek-huge.c  print-symlink.c  read-file.c  timestamp.c  write-all.c  write-args.c
0x0A/Lab_05/: BUILD.md  CMakeLists.txt  Doxyfile  INSTALL.md  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac
0x0A/Lab_05/Lab_05_Client/: Args.c  Args.h  CMakeLists.txt  Client.c  Client.h  ClientArgs.c  ClientArgs.h  Makefile  Makefile.am  Makefile.in  main.c
0x0A/Lab_05/Lab_05_Lib/: Args.c  Args.h  ArgsPrivate.c  ArgsPrivate.h  CMakeLists.txt  Input.c  Input.h  LastErrorMessage.c  LastErrorMessage.h  Macro.h  Makefile  Makefile.am  Makefile.in  Matrix.c  Request.c  Request.h  ReturnCodes.c  ReturnCodes.h  ReturnCodesLib.c  ReturnCodesLib.h  Socket.h  Utils.c  Utils.h  q.c  q.h
0x0A/Lab_05/Lab_05_MatrixLib/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Matrix.c  Matrix.h
0x0A/Lab_05/Lab_05_MatrixLibTests/: CMakeLists.txt  MatrixTests.c  MatrixTests.h  Suite.c  main.c
0x0A/Lab_05/Lab_05_Net/: CMakeLists.txt  LastErrorMessage.c  LastErrorMessage.h  Makefile  Makefile.am  Makefile.in  Request.c  Request.h  Socket.c  Socket.h
0x0A/Lab_05/Lab_05_Server/: Args.c  Args.h  CMakeLists.txt  Server.c  Server.h  ServerArgs.c  ServerArgs.h  main.c
0x0A/Lab_05/Lab_05_Sockets/: CMakeLists.txt  Socket.c  Socket.h
0x0A/Lab_05/getopt-from-mingw/: getopt.c
0x0E/Lab_06/: CMakeLists.txt  Makefile  Matrix.h  MatrixIO.h
0x0E/Lab_06/Lab_06_AArch64/: CMakeLists.txt  Lab_06_AArch64  Makefile  Makefile-termux.mk  Matrix.s  MatrixIO.s  main.s
0x0E/Lab_06/Lab_06_AArch64/Lab_06_AArch64_Lib/: CMakeLists.txt  Matrix.s
0x0E/Lab_06/Lab_06_C/: CMakeLists.txt  Makefile  Makefile-aarch64.mk  Makefile-i386.mk  Makefile-to-asm-mingw.mk  Makefile-to-asm.mk  Matrix.c  MatrixIO.c  main.c
0x0E/Lab_06/Lab_06_C/Lab_06_C_Lib/: CMakeLists.txt  Matrix.c
0x0E/Lab_06/Lab_06_SPIM/: Lab_06_mips-spim.s  main.s
0x0E/Lab_06/Lab_06_Tests/: CMakeLists.txt  Lab_06_Tests  Makefile  Makefile-aarch64-termux.mk  Makefile-aarch64.mk  Makefile-android.mk  Makefile-i386.mk  Makefile-termux.mk  MatrixTests.c  MatrixTests.h  Suite.h  main.c
0x0E/Lab_06/Lab_06_aarch64-gas/: Lab_06_aarch64-gas  Makefile  Makefile-termux.mk  Matrix.s  MatrixIO.s  main.s
0x0E/Lab_06/Lab_06_i386/: Makefile  Matrix.s  MatrixIO.s  main.s
0x0E/Lab_06/Lab_06_i386-gas/: Lab_06_i386-gas  Makefile  Matrix.s  MatrixIO.s  main.s
0x0E/Lab_06/Lab_06_i386/Lab_06_i386_Lib/: CMakeLists.txt
0x0E/Lab_06/Lab_06_mips-spim/: Lab_06_mips-spim.s
(+232 files in other folders)
