cmake_minimum_required(VERSION 3.0)
project(SystemProgramming)

add_subdirectory(cunit/CUnit)

#add_subdirectory(0x01/1-UnitTesting)

#add_subdirectory(0x02/1-Process)
#add_subdirectory(0x02/Lab_01)

#add_subdirectory(0x03/2-Threads)

#add_subdirectory(SDL-mirror)

#add_subdirectory(0x04/3-Synchro)

add_subdirectory(0x04/Lab_02)

add_subdirectory(0x06/Lab_03)

#add_subdirectory(0x08/4-Files)

add_subdirectory(0x08/Lab_04)

add_subdirectory(0x0A/Lab_05)

#add_subdirectory(0x0E/Lab_06_C1)
#add_subdirectory(0x0E/Lab_06/Lab_06_C)
#add_subdirectory(0x0E/Lab_06/Lab_06_Tests)
