cmake_minimum_required(VERSION 3.10)

set(CMAKE_C_STANDARD 11)

#project(condvar C)
#add_executable(condvar condvar.c)

#project(job-queue1 C)
#add_executable(job-queue1 job-queue1.c)

#project(job-queue2 C)
##add_executable(job-queue2 job-queue2.c)

#project(job-queue3 C)
#add_executable(job-queue3 job-queue3.c)

#project(spin-condvar C)
#add_executable(spin-condvar spin-condvar.c)
