cmake_minimum_required(VERSION 3.0)
project(Lab_06)

add_subdirectory(Lab_06_AArch64)
add_subdirectory(Lab_06_AArch64/Lab_06_AArch64_Lib)
add_subdirectory(Lab_06_i386)
#add_subdirectory(Lab_06_i386/Lab_06_i386_Lib)
add_subdirectory(Lab_06_C)
add_subdirectory(Lab_06_C/Lab_06_C_Lib)
add_subdirectory(Lab_06_Tests)
